# pymdp

./: Dockerfile  README.md  pymdp.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python.yml
src/pymdp/: pymdp.py
tests/: test_main.py
