[project]
name = "pymdp"
version = "1.1.0"
description = "mdpr.jp image list"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "attrs==25.3.0",
    "frozenlist==1.6.0",
    "idna==3.10",
    "lxml==5.3.2",
    "multidict==6.4.3",
    "propcache==0.3.1",
    "yarl==1.20.0",
]

[project.urls]
"Source" = "https://github.com/qmaru/pymdp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/pymdp"]

[project.scripts]
mdp = "pymdp.pymdp:cli"
