[project]
name = "pymdp"
version = "1.4.0"
description = "mdpr.jp image list"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13",
    "lxml>=6",
]

[project.urls]
"Source" = "https://github.com/qmaru/pymdp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/pymdp"]

[project.scripts]
mdpdl = "pymdp.pymdp:cli"
